--- a/app/src/main/res/layout/list_item_kuliner.xml
+++ b/app/src/main/res/layout/list_item_kuliner.xml
@@ -37,6 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="DESKRIPSI SINGKAT"
+            android:maxLength="20"
             />
 
     </LinearLayout>
