--- a/app/src/main/res/layout/activity_tambah.xml
+++ b/app/src/main/res/layout/activity_tambah.xml
@@ -1,68 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".Activity.TambahActivity"
-    android:layout_margin="6dp">
+    android:background="#FFFFFF"
+    >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Tambah Kuliner"
-        android:textSize="21sp"
-        android:textStyle="bold"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal"
-        android:layout_marginBottom="32dp"
-        />
-
-    <EditText
-        android:id="@+id/et_nama"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Nama Kuliner"
-        android:background="@color/white"
-        android:inputType="text"
-        android:textSize="21sp"
-        android:padding="8dp"
-        />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/et_asal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Asal Kuliner"
-        android:background="@color/white"
-        android:inputType="text"
-        android:textSize="21sp"
-        android:padding="8dp"
-        android:layout_marginTop="6dp"
-        />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:src="@drawable/ic_mall_sparepart_pc"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginVertical="30dp"/>
 
-    <EditText
-        android:id="@+id/et_deskripsi_singkat"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Deskripsi Singkat Kuliner"
-        android:background="@color/white"
-        android:inputType="text"
-        android:textSize="21sp"
-        android:padding="8dp"
-        android:layout_marginTop="6dp"
-        />
+        <EditText
+            android:id="@+id/et_nama"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Nama Sparepart"
+            android:inputType="text"
+            android:textSize="19sp"
+            android:padding="15dp"
+            android:layout_margin="10dp"
+            />
 
-    <Button
-        android:id="@+id/btn_tambah"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="TAMBAH DATA"
-        android:textSize="16sp"
-        android:padding="8dp"
-        android:layout_marginHorizontal="8dp"
-        />
+        <EditText
+            android:id="@+id/et_kategori"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Kategori Sparepart"
+            android:inputType="text"
+            android:textSize="19sp"
+            android:layout_marginTop="6dp"
+            android:padding="15dp"
+            android:layout_margin="10dp"
+            />
 
-</LinearLayout>
+        <EditText
+            android:id="@+id/et_deskripsi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Deskripsi Sparepart"
+            android:inputType="text"
+            android:textSize="19sp"
+            android:layout_marginTop="6dp"
+            android:padding="15dp"
+            android:layout_margin="10dp"
+            />
+
+        <EditText
+            android:id="@+id/et_kapasitas"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Kapasitas Sparepart"
+            android:inputType="text"
+            android:textSize="19sp"
+            android:layout_marginTop="6dp"
+            android:layout_margin="10dp"
+            android:padding="15dp"
+            />
+
+        <EditText
+            android:id="@+id/et_type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Type Sparepart"
+            android:inputType="text"
+            android:textSize="19sp"
+            android:layout_marginTop="6dp"
+            android:layout_margin="10dp"
+            android:padding="15dp"
+            />
+
+        <Button
+            android:id="@+id/btn_tambah"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
+            android:text="Tambah Data"
+            android:textAllCaps="false"
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:padding="5dp"
+            android:layout_marginHorizontal="30dp"
+            android:background="@drawable/button_rounded"
+            android:layout_marginBottom="30dp"
+            android:fontFamily="@font/quicksand_bold"
+            />
+
+    </LinearLayout>
+
+</ScrollView>
