--- a/app/src/main/res/layout/list_item_kuliner.xml
+++ b/app/src/main/res/layout/list_item_kuliner.xml
@@ -2,43 +2,96 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    android:padding="8dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginVertical="10dp"
+    android:layout_marginHorizontal="20dp"
+    android:id="@+id/item_container"
+    app:cardCornerRadius="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal"
+        android:padding="10dp">
 
-        <TextView
-            android:id="@+id/tv_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:text="ID"
+        <ImageView
+            android:id="@+id/ic_kategori"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/ic_motherboard"
             />
 
-        <TextView
-            android:id="@+id/tv_nama"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="NAMA"
-            />
-        <TextView
+            android:orientation="vertical"
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="center">
 
-            android:id="@+id/tv_asal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ASAL"
+            <TextView
+                android:id="@+id/tv_id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:text="ID"
+                android:padding="3dp"
+                android:fontFamily="@font/quicksand_bold"
             />
 
-        <TextView
-            android:id="@+id/tv_deskripsi_singkat"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="DESKRIPSI SINGKAT"
-            android:maxLength="20"
-            />
+            <TextView
+                android:id="@+id/tv_nama"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="NAMA"
+                android:padding="3dp"
+                android:fontFamily="@font/quicksand_bold"
+                android:textColor="@color/white"
+                />
+            <TextView
+                android:id="@+id/tv_kategori"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="KATEGORI"
+                android:visibility="gone"
+                android:padding="3dp"
+                android:fontFamily="@font/quicksand_bold"
+                android:textColor="@color/white"
+                />
+
+            <TextView
+                android:id="@+id/tv_deskripsi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="DESKRIPSI"
+                android:visibility="gone"
+                android:padding="3dp"
+                android:fontFamily="@font/quicksand_bold"
+                android:textColor="@color/white"
+                />
+
+            <TextView
+                android:id="@+id/tv_kapasitas"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="KAPASITAS"
+                android:maxLength="20"
+                android:padding="3dp"
+                android:fontFamily="@font/quicksand_semibold"
+                android:textColor="@color/white"
+                />
+
+            <TextView
+                android:id="@+id/tv_type"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TYPE"
+                android:maxLength="20"
+                android:padding="3dp"
+                android:fontFamily="@font/quicksand_regular"
+                android:textColor="@color/white"
+                />
+
+        </LinearLayout>
 
     </LinearLayout>
 
